# servant-static

./: README.md  cabal.project  default.nix  hie.yaml
servant-static/: README.lhs  README.md  servant-static.cabal
servant-static/src/Servant/: Static.hs
