cabal-version: 2.2
name: servant-static
version: 0.1.0
build-type: Simple

library
  hs-source-dirs: src
  default-language: Haskell2010
  exposed-modules: Servant.Static
  build-depends: base
               , bytestring
               , cryptonite
               , file-embed
               , filepath
               , http-types
               , mime-types
               , servant
               , servant-server
               , template-haskell
               , th-lift-instances
               , text
               , wai
               